unpackaged/main/default/objects/External_Unique_Object__c/External_Unique_Object__c.object-meta.xml
<CustomObject>
	<label>External Unique Object</label>
	<nameField>
		<displayFormat>{0}</displayFormat>
		<label>External Unique Object Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>External Unique Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>