unpackaged/main/default/objects/External_Unique_Object__c/fields/Account__c.field-meta.xml
<CustomField>
	<fullName>Account__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<description>Indirect lookup Relationship</description>
	<label>Account</label>
	<referenceTo>Account</referenceTo>
	<relationshipLabel>External Unique Objects</relationshipLabel>
	<relationshipName>External_Unique_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>