unpackaged/main/default/objects/External_Unique_Object__c/fields/External_Unique_Num__c.field-meta.xml
<CustomField>
	<fullName>External_Unique_Num__c</fullName>
	<externalId>true</externalId>
	<label>External Unique Num</label>
	<precision>10</precision>
	<required>true</required>
	<scale>0</scale>
	<type>Number</type>
	<unique>true</unique>
</CustomField>