unpackaged/main/default/objects/External_Unique_Object__c/fields/Other_text_field__c.field-meta.xml
<CustomField>
	<fullName>Other_text_field__c</fullName>
	<label>Other text field</label>
	<length>55</length>
	<type>Text</type>
</CustomField>